--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "start": "vue-cli-service serve --mode development"
   },
   "dependencies": {
+    "axios": "^0.26.0",
+    "bootstrap": "4.5.3",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "echarts": "^4.6.0",
+    "jslinq": "^1.0.22",
     "vue": "^2.6.11"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.13",
-    "@vue/cli-service": "~4.5.13",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "vue-template-compiler": "^2.6.11"
